sortering er lavet men ikke implementeret endnu

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 	<div id="lars">
 		<div id="ev201807061" class="arangement">
 			<div class="overskrift"><h2>Fredag 6/7 Karaoke på Hesten</h2></div>
-			<img src="uploads/karaoke_2018_7.jpg">Vi gør det igen! Kom til karaoke aften på Hesten fredag D. 6 juli kl 19! 😁🍺 Tag nogle venner med og syng en duet 💃🕺
+			<img src="uploads/karaoke_2018_7.jpg">Vi gør det igen! Kom til karaoke aften på Hesten fredag D. 6 juli kl 19! 😁🍺 Tag nogle venner med og syng en duet 💃
 			<div id="deltagere">Deltagere: 999 <a href="#" id ="deltag">Deltag</a> </div>
 		</div>
 
@@ -51,4 +51,5 @@
 </body>
 <script src="hesten.js"></script>
 <script src="upload.js"></script>
+<script src="click.js"></script>
 </html>
