--- a/index.html
+++ b/index.html
@@ -1,7 +1,5 @@
 <!DOCTYPE html>
-<?php
-	SETCOOKIE("filnavn", "test", time() + 100 );
-?>
+
 <html>
 <head>
 	<meta charset="UTF-8">
@@ -10,10 +8,10 @@
 
 	<title>Kommende arrangementer på Hesten</title>
 	<link rel="stylesheet" href="hesten.css">
-	<!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script> -->
-	<script src="https://code.jquery.com/jquery-3.3.1.min.js"
+	 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script> 
+	<!--<script src="https://code.jquery.com/jquery-3.3.1.min.js"
   integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
-  crossorigin="anonymous"></script>
+  crossorigin="anonymous"></script>-->
 </head>
 <body>
 	
@@ -23,7 +21,7 @@
 	</div>
 	<span class="tittel"><h1>Kommende arangementer</h1></span>
 	<div id="lars">
-		<div id="ev201807061" class="arangement">
+		<!-- <div id="ev201807061" class="arangement">
 			<div class="overskrift"><h2>Fredag 6/7 Karaoke på Hesten</h2></div>
 			<img src="uploads/karaoke_2018_7.jpg">Vi gør det igen! Kom til karaoke aften på Hesten fredag D. 6 juli kl 19! 😁🍺 Tag nogle venner med og syng en duet 💃
 			<div id="deltagere">Deltagere: 999 <a href="#" id ="deltag">Deltag</a> </div>
@@ -33,15 +31,15 @@
 			<div class="overskrift"><h2>Fredag 7/9 Karaoke</h2></div>
 			<img src="uploads/karaoke_2018_9.jpg">
 			<div id="deltagere">Deltagere: 999 <a href="#" id ="deltag">Deltag</a> </div>
-		</div>
+		</div> -->
 	</div>
 
 	<form method="post" enctype="multipart/form-data">
 		<input type="date" name="date" id="date" placeholder="Dato">
 		<input type="text" name="overskrift" id="overskrift" placeholder="Overskrift">
-		<input type="file" name="files[]" multiple>
+		<input type="file" name="files[]">
 		<input type="text" name="tekst" id="tekst" placeholder="Beskrivelse">
-		<button type="submit" value="Upload File" name="submit">opload</button>
+		<button value="Upload File" id="opload" name="submit">upload</button>
 	</form>
 </div>
 
@@ -49,7 +47,8 @@
 
 
 </body>
-<script src="hesten.js"></script>
-<script src="upload.js"></script>
-<script src="click.js"></script>
+<script src="scripts/modal.js"></script>
+<script src="scripts/hesten.js"></script>
+<script src="scripts/upload.js"></script>
+<script src="scripts/click.js"></script>
 </html>
